# tls-tournament-management

./: .gitignore  .prettierrc  Cargo.toml
.cargo/: config.toml
backend/: Cargo.toml
backend/src/: database.rs  main.rs
backend/src/endpoints/: authorization.rs  match_set.rs  mod.rs  player.rs  series.rs  team.rs  tournament.rs
backend/src/schema/: game.rs  match_set.rs  mod.rs  player.rs  team.rs  tournament.rs
frontend/: .dockerignore  .prettierrc  .yarnrc.yml  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/App/: App.tsx  Authorization.tsx  Layout.tsx  Navbar.tsx  Navigation.tsx  authenticationHelper.tsx  router.ts  routes.tsx
frontend/src/Home/: AuthCallback.tsx  Home.tsx  index.ts
frontend/src/Matches/: CreateMatch.tsx  ListMatch.tsx  MatchForm.tsx  SingleMatch.tsx  UpdateMatch.tsx  index.ts
frontend/src/Player/: CreatePlayer.tsx  ListPlayer.tsx  PlayerForm.tsx  SinglePlayer.tsx  UpdatePlayer.tsx  index.ts
frontend/src/Team/: CreateTeam.tsx  ListTeam.tsx  SingleTeam.tsx  TeamForm.tsx  UpdateTeam.tsx  index.ts
frontend/src/Tournament/: Create.tsx  CreateTournament.tsx  Form.tsx  List.tsx  ListTournament.tsx  SingleTournament.tsx  TournamentForm.tsx  UpdateTournament.tsx  index.ts
frontend/src/api/: api.ts  apiCore.ts  index.ts  tournament.ts  tournaments.ts
frontend/src/assets/: index.html  main.scss
frontend/src/bindings/: CreateGame.ts  CreateMatch.ts  CreatePlayer.ts  CreateTeam.ts  CreateTournament.ts  Game.ts  GameState.ts  Match.ts  Player.ts  (+9 more)
schema/: Cargo.toml
(+58 files in other folders)
