[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dotenv = "0.15.0"
log = "0.4.29"
pretty_env_logger = "0.5.0"

futures = "0.3.32"
actix-web = "4.13.0"
actix-cors = "0.7.1"
actix-web-lab = { version = "0.26.0", features = ["spa"] }

mongodb = { version = "3.5.2" }
riven = "2.78.0"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
ts-rs = { version = "12.0.1", features = ["chrono-impl", "bson-uuid-impl"] }